--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,7 +18,77 @@ span {
   font-family: 'Rubik', sans-serif;
 }
 
+/* Custom Navigation Styling */
+
 .activeNav > div {
   background-color: rgb(139, 92, 246);
   color: white;
+}
+
+/* Custom Loader Styling */
+.loader {
+  width: 70px;
+  overflow: visible;
+  pointer-events: none;
+  z-index: 50;
+}
+svg .loader-ring {
+  transform-origin: 50px 50px;
+  animation: starting-fill 0.5s forwards,
+    vary-loader-width 3s 0.5s linear infinite alternate,
+    spin 1s 0.2s linear infinite;
+}
+svg .loader-ring-overlay {
+  visibility: hidden;
+  transform-origin: 50px 50px;
+  animation: spin 1.6s 0.2s linear infinite;
+}
+.complete .loader-ring-overlay {
+  visibility: visible;
+  animation: complete-fill 0.5s linear forwards, spin 1.6s 0.2s linear infinite;
+}
+.complete .loader-ring {
+  animation: starting-fill 0.5s forwards,
+    vary-loader-width 3s 0.5s linear infinite alternate,
+    spin 1.6s 0.2s linear infinite, fade 0.1 0.5s linear forwards;
+}
+.complete svg {
+  animation: fade 0.2s 0.7s linear forwards;
+  transition: all 0s 0.9s;
+  cursor: initial;
+  pointer-events: none;
+}
+@keyframes starting-fill {
+  to {
+    stroke-dashoffset: 270;
+  }
+}
+@keyframes vary-loader-width {
+  0% {
+    stroke-dashoffset: 270;
+  }
+  50% {
+    stroke-dashoffset: 170;
+  }
+  100% {
+    stroke-dashoffset: 275;
+  }
+}
+@keyframes complete-fill {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+@keyframes fade {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
 }
