--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,6 +18,16 @@ span {
   font-family: 'Rubik', sans-serif;
 }
 
+/* Table Styling and Normalization */
+thead {
+  text-align: left;
+}
+th,
+td {
+  font-weight: normal;
+  font-family: 'Rubik', sans-serif;
+}
+
 /* Custom Navigation Styling */
 
 .activeNav > div {
