styling and filter price logic

--- a/client/src/tailwind.css
+++ b/client/src/tailwind.css
@@ -45,6 +45,8 @@ td {
   }
 }
 
+/* Remove default styles from number input */
+
 /* Custom Loader Styling */
 svg .loader-ring {
   transform-origin: 50px 50px;
